# QtCanBusTest

./: CMakeLists.txt  RunSystem.sh  client_log.txt  server_log.txt
CANBusClient/: CMakeLists.txt  Main.qml  VCANdevices.sh  VCANdevicesOFF.sh  canIClient.cpp  canIClient.h  caninterfaceclient.cpp  caninterfaceclient.h  main.cpp  targetsmodel.cpp  targetsmodel.h
CANBusServer/: CAN_Bus_raschet.py  CMakeLists.txt  Docs.md  Main.qml  VCANdevices.sh  VCANdevicesOFF.sh  canIServer.cpp  canIServer.h  caninterface.cpp  caninterface.h  integrationmodule.cpp  integrationmodule.h  main.cpp
CanLib/: CMakeLists.txt  CanLib_global.h  caninterface.cpp  caninterface.h  customlogger.cpp  customlogger.h
